--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=UserManagementService
+server.port=8080
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.boot=DEBUG
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/UserDetails
+spring.datasource.username=root
+spring.datasource.password=P@ssword123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql= true
