--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=UserManagementService
-server.port=8080
+server.port=8081
+eureka.client.serviceUrl.defaultZone=http://localhost:8000/eureka/
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.boot=DEBUG
 spring.jpa.hibernate.ddl-auto=update
